--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Name: Ivan M Polanco</title>
-   </head>
-   <body>
-   </body>
- </html>
+<head>
+<title>Ivan's GitHub Assessment</title>
+</head>
+<body>
+
+  <h1>Name: Ivan M Polanco</h1>
+<h2>Here is a list of my hobbies</h2>
+		<ul>
+			<li>Learning Code</li>
+      <li>Graphic Design</li>        
+      <li>Collecting Sports Cards</li>
+      <li>Legos</li>        
+     </ul>
+    
+  <p> I hope I dont get points off for not enclosing the list in h1 tags :)</p>
+  
+</body>
+</html>
